--- a/CSS/style_elimi.css
+++ b/CSS/style_elimi.css
@@ -186,4 +186,35 @@ textarea{
 	/*resize: vertical | horizontal | none | both*/
 	resize:none;
 	display:block;
+    
+}
+.columna_izquierda{
+    display: inline-block;
+    /*position: static;*/
+    width: 250px;
+    height: 882px;
+    padding: 100px 40px;
+    background-color: rgba(233, 139, 76, 0.911);
+    
+}
+.botton{
+    width: 180px;
+    border-style: solid;
+    border-radius: 7px;
+    border-color: rgb(0, 0, 0);
+    background-color: rgb(248, 95, 7);
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 10px;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+.botton:hover{
+    background-color: rgb(238, 62, 9);
+}
+.botton:active{
+    transform: scale(.95);
 }
