--- a/CSS/modi_style.css
+++ b/CSS/modi_style.css
@@ -39,6 +39,7 @@ form{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
     cursor: pointer;
+    display: inline-block;
 }
 .botton:hover{
     background-color: rgb(238, 62, 9);
