--- a/CSS/modi_style.css
+++ b/CSS/modi_style.css
@@ -13,30 +13,25 @@
 *, *::before,*::after{
     box-sizing: border-box;
 }
-
 .columna_izquierda{
     display: inline-block;
     width: 250px;
     height: 882px;
     padding: 100px 40px;
-    background-color: rgba(233, 139, 76, 0.911);
-    
+    background-color: #fc9d4b;
 }
 form{
     display: inline-block;
 }
 .botton{
+    background-color:#dd5e17;
+    color:white;
+    box-shadow:4px 3px black;
     width: 180px;
-    border-style: solid;
-    border-radius: 7px;
-    border-color: rgb(0, 0, 0);
-    background-color: rgb(248, 95, 7);
     margin: auto;
     margin-top: 10px;
     margin-bottom: 5px;
     padding: 10px;
-    color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
     cursor: pointer;
     display: inline-block;
@@ -96,6 +91,7 @@ a{
     right: 500px;
     left:6px;
     top: 3px;
+    width: 90px;
 }
 .fondo2{
     background-color:#ffebca;
@@ -113,6 +109,14 @@ table{
     position: absolute;
     left: 300px;
     top: 180px;
+}
+tr, th {
+    border: black 2px solid;
+    height: 70px;
+}
+tr, td {
+    width: 150px;
+    text-align: center;
 }
 .hide{
     visibility: hidden;
