--- a/CSS/style_enviarmensaj.css
+++ b/CSS/style_enviarmensaj.css
@@ -22,7 +22,8 @@ body{
 	margin-top: 100px;
 	font-family: 'arial';
 	color: black;
-    border-radius: 0%, color: black;}
+    border-radius: 0%, color black;
+}
 
 h2{
     display: block;
@@ -40,6 +41,10 @@ h2{
     color: rgb(5, 5, 5);
     cursor: pointer;
     
+}
+
+.espacio_mensaje .espacio {
+    height: 100px;
 }
 
 .textostitulo{
